--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,7 @@
 <html lang="en-ca">
   <head>
     <meta charset="utf-8" />
-    <meta name="description" content="My first webpage, with a favicon" />
+    <meta name="description" content="My second webpage, with a favicon" />
     <meta name="keywords" content="mths, icd2o" />
     <meta name="author" content="Bain Liao" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -16,11 +16,25 @@
       rel="stylesheet"
       href="https://code.getmdl.io/1.3.0/material.light_blue-orange.min.css"
     />
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
-    <link rel="manifest" href="site.webmanifest" />
-    <title>My first webpage, with a favicon</title>
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./favicon-16x16.png"
+    />
+    <link rel="manifest" href="./site.webmanifest" />
+    <title>My second webpage, with a favicon</title>
   </head>
 
   <body>
@@ -32,9 +46,13 @@
         </div>
       </header>
       <main class="mdl-layout__content">
-        <div class="page-content">See favicon above.</div>
+        <div class="page-content">
+          <div id="hello-world">
+            <p>Some text here.</p>
+          </div>
+        </div>
         <p>
-          <a href="./index2.html">My index2.html page</a>
+          <a href="./index.html">return</a>
         </p>
       </main>
     </div>
