did the extra for 1-06

--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="mths, icd2o" />
     <meta name="author" content="Bain Liao" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/style2.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -47,8 +47,9 @@
       </header>
       <main class="mdl-layout__content">
         <div class="page-content">
-          <div id="hello-world">
-            <p>Some text here.</p>
+          <div id="fire-text-here">
+            <p>Jeremiah 29:11 ~ For I know the plans I have for you, declares the Lord, plans for welfare and not for evil, to give you
+            a future and a hope.</p>
           </div>
         </div>
         <p>
