updated index2 and style2

--- a/index2.html
+++ b/index2.html
@@ -46,7 +46,7 @@
         </div>
       </header>
       <main class="mdl-layout__content">
-        <div class="page-content">
+        <div class="bible-quote">
           <div id="fire-text-here">
             <p>Jeremiah 29:11 ~ For I know the plans I have for you, declares the Lord, plans for welfare and not for evil, to give you
             a future and a hope.</p>
